# block_divider

./: .gitignore  Cargo.toml  README.md  default.nix  package-lock.json
core/: .gitignore  Cargo.toml  diesel.toml
core/migrations/2024-09-22-151110_create_users/: up.sql
core/migrations/2024-09-23-203221_create_division/: down.sql  up.sql
core/migrations/2024-10-22-174933_key_value_store/: down.sql  up.sql
core/migrations/2024-11-06-000110_change_division_structure/: down.sql  up.sql
core/src/: lib.rs  main.rs  schema.rs
core/src/data/: bucket.rs
core/src/db/: division.rs  handler.rs  key_value.rs  mod.rs  user.rs
core/src/division/: basis.rs  block_division.rs  bucket.rs  mod.rs  participant.rs  round.rs  selections.rs  state.rs
core/src/mail/: mod.rs
core/src/server/: block_division_post.rs  block_division_state_request.rs  commons.rs  handler.rs  mod.rs
core/src/server/requests/: block_division_delete.rs  block_division_list.rs  block_division_new_basis.rs  block_division_set_open_round.rs  block_division_set_state.rs  block_division_state.rs  block_division_submit_selection.rs  block_division_user_view.rs  mod.rs
core/src/server/responses/: mod.rs
deploy/: deploy_to_production.sh
deploy/dev/: deploy_dev_stack.sh  stack.yml
deploy/prod/: README.md  build.sh  deploy copy.sh  deploy.sh  example.env
deploy/prod (from autoscheda - needs adaptation)/: README.md  build.sh  update.sh
frontend/: .eslintrc.cjs  .gitignore  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.html
src/: lib.rs
(+83 files in other folders)
