[package]
name = "block_divider"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
chrono = { version = "^0.4", features = ["serde"] }