[package]
name = "block_divider"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "^1"
serde = { version = "^1", features = ["derive"] }
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full"] }
futures-util = "^0"
http-body-util = "0.1"
hyper-util = { version = "^0.1", features = ["full"] }
chrono = { version = "^0.4", features = ["serde"] }
rand = "^0"
hyper-services = { path = "../../trm-rust-libs/hyper-services" }
mail = { path = "../../trm-rust-libs/mail" }
db = { path = "../../trm-rust-libs/db" }
diesel = { version = "^2", features = ["postgres"] }
dotenvy = "^0" #loads environement variables from .env for development purposes
